Certificate of Grad Studies Edits Cont.

--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-16T19:29:00Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								j74U7+SdGofa
-								NrsRD5os4Q==
+								yfL0uzuI6G+a
+								Ix2HgG88Mw==
 								</data>
 								<key>Size</key>
-								<integer>64884</integer>
+								<integer>64944</integer>
 							</dict>
 							<key>index_files/medium_526602.png</key>
 							<dict>
@@ -314,8 +314,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QP7jOD9RYqzv
-								Wo92BQuSwg==
+								TUPGEJQdYGG5
+								5RZkQ/nBxg==
 								</data>
 								<key>Size</key>
 								<integer>135368</integer>
