--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-16T19:29:00Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hk3OMdsRQwk3
-								5EnC4ot9iw==
+								k8JefBCQobrp
+								Zev/Fwmrgg==
 								</data>
 								<key>Size</key>
-								<integer>218404</integer>
+								<integer>218391</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -372,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BVeQwfE3bli5
-								aOdthpqd0A==
+								InmEXmLJU4gH
+								8goYHopzBg==
 								</data>
 								<key>Size</key>
-								<integer>148576</integer>
+								<integer>148875</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
