--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T17:49:21Z</date>
+						<date>2018-07-16T19:29:00Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,8 +112,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ux29tdlRvxg3
-								KH2/SRKsmg==
+								HbKpdsx5dndq
+								d3/JW5/Njw==
 								</data>
 								<key>Size</key>
 								<integer>96352</integer>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KsTEt1Rek5yL
-								A67xsaaqpQ==
+								uRi1y24h4I01
+								18NspNkvng==
 								</data>
 								<key>Size</key>
-								<integer>38413</integer>
+								<integer>38435</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
