--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-16T19:29:00Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rZ6OVE8wuS0L
-								QgtHtsWeAw==
+								h7SYKvJCvcsz
+								WaLHNqOseA==
 								</data>
 								<key>Size</key>
-								<integer>207020</integer>
+								<integer>207009</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
@@ -302,11 +302,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5dirFytAl6b5
-								WYBW5xKvog==
+								d8d8C4NfnnAL
+								ayRdvCtPEg==
 								</data>
 								<key>Size</key>
-								<integer>120930</integer>
+								<integer>121183</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
