Masters Page edits

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -64,7 +64,7 @@
 					<key>page0 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T20:26:32Z</date>
+						<date>2018-07-16T20:57:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -363,11 +363,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XKUX7GbDzr1O
-								c+r3CqWunA==
+								5A7y1mf0z5ee
+								XPCYPQXMhQ==
 								</data>
 								<key>Size</key>
-								<integer>207333</integer>
+								<integer>199978</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -383,11 +383,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SN5+FrY3DtsZ
-								AQmnGsTcgA==
+								bdvKXswFMokY
+								ANKnzyHEXg==
 								</data>
 								<key>Size</key>
-								<integer>143823</integer>
+								<integer>139492</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7090,7 +7090,7 @@
 					<key>page7 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T19:29:00Z</date>
+						<date>2018-07-16T20:57:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7134,16 +7134,6 @@
 								</data>
 								<key>Size</key>
 								<integer>146901</integer>
-							</dict>
-							<key>files/medium_526288.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								nADf6fHxau4a
-								G2s0VctITQ==
-								</data>
-								<key>Size</key>
-								<integer>144349</integer>
 							</dict>
 							<key>files/medium_526394.png</key>
 							<dict>
@@ -7234,16 +7224,6 @@
 								</data>
 								<key>Size</key>
 								<integer>39855</integer>
-							</dict>
-							<key>files/small_526288.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								RQpG5l32LHX7
-								TAk8lyjNOg==
-								</data>
-								<key>Size</key>
-								<integer>181544</integer>
 							</dict>
 							<key>files/small_526315.png</key>
 							<dict>
@@ -7339,11 +7319,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								h7SYKvJCvcsz
-								WaLHNqOseA==
+								w7L+/vYGekzd
+								H6xiemoy7Q==
 								</data>
 								<key>Size</key>
-								<integer>207009</integer>
+								<integer>206937</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
@@ -7359,11 +7339,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								d8d8C4NfnnAL
-								ayRdvCtPEg==
+								hNmZZp0oIeSu
+								RP4DIYXGFg==
 								</data>
 								<key>Size</key>
-								<integer>121183</integer>
+								<integer>120804</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7548,7 +7528,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T20:26:32Z</date>
+						<date>2018-07-16T20:57:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7597,11 +7577,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sznwmEsdhaNN
-								HB7ZTYenDQ==
+								DkJA+22y9L7m
+								qQnHRwrBSg==
 								</data>
 								<key>Size</key>
-								<integer>4262</integer>
+								<integer>4134</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7650,7 +7630,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T20:26:32Z</date>
+						<date>2018-07-16T20:57:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8689,11 +8669,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UU94Ku/+iPbb
-								Jjgo1/q23w==
+								CczgcQS6z/xA
+								kUK5wOQMvw==
 								</data>
 								<key>Size</key>
-								<integer>3697</integer>
+								<integer>3290</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8777,8 +8757,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB+m30s
-				myCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB+nyvh
+				JBiAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -8788,7 +8768,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB+m30snrqA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB+nyvhJ92A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
