--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T20:26:32Z</date>
+						<date>2018-07-16T20:57:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -332,11 +332,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XKUX7GbDzr1O
-								c+r3CqWunA==
+								5A7y1mf0z5ee
+								XPCYPQXMhQ==
 								</data>
 								<key>Size</key>
-								<integer>207333</integer>
+								<integer>199978</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SN5+FrY3DtsZ
-								AQmnGsTcgA==
+								bdvKXswFMokY
+								ANKnzyHEXg==
 								</data>
 								<key>Size</key>
-								<integer>143823</integer>
+								<integer>139492</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
