--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T20:57:57Z</date>
+						<date>2018-07-17T15:55:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -332,11 +332,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5A7y1mf0z5ee
-								XPCYPQXMhQ==
+								kCKtlIF17siR
+								PYe3YZwtMQ==
 								</data>
 								<key>Size</key>
-								<integer>199978</integer>
+								<integer>209163</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bdvKXswFMokY
-								ANKnzyHEXg==
+								fuajTjHNIetE
+								xSo6cJ/k9w==
 								</data>
 								<key>Size</key>
-								<integer>139492</integer>
+								<integer>143622</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
