--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,20 +33,20 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T20:58:11Z</date>
+						<date>2018-07-17T15:55:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110165.jpg</key>
+							<key>files/backgroundImage_110165.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								uSoquum6mCty
-								uIn2fhh+hw==
+								m4SIJWUYoI1W
+								Jj7AajYAuA==
 								</data>
 								<key>Size</key>
-								<integer>571092</integer>
+								<integer>91721</integer>
 							</dict>
 							<key>files/small_109872.jpg</key>
 							<dict>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wWfF8ZhnnLRc
-								oqcHDR7/Wg==
+								ENNNyIrQIJsR
+								oSvjcdMzPQ==
 								</data>
 								<key>Size</key>
-								<integer>131101</integer>
+								<integer>131854</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pOePQVar96yN
-								UYT7M1AO8Q==
+								7M6DXo9nirEf
+								yX3HLuQnkg==
 								</data>
 								<key>Size</key>
-								<integer>66928</integer>
+								<integer>67093</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
