--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -64,7 +64,7 @@
 					<key>page0 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T20:57:57Z</date>
+						<date>2018-07-17T14:30:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -363,11 +363,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5A7y1mf0z5ee
-								XPCYPQXMhQ==
+								kCKtlIF17siR
+								PYe3YZwtMQ==
 								</data>
 								<key>Size</key>
-								<integer>199978</integer>
+								<integer>209163</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -383,11 +383,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bdvKXswFMokY
-								ANKnzyHEXg==
+								fuajTjHNIetE
+								xSo6cJ/k9w==
 								</data>
 								<key>Size</key>
-								<integer>139492</integer>
+								<integer>143622</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8757,8 +8757,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB+nyvh
-				JBiAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB/Gnv8
+				ey2AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -8768,7 +8768,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB+nyvhJ92A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB/Gnv8gEmA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
